editor-components/intro-section/intro-section8/intro-section8.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  position: relative;
  width: 100%;
  overflow: hidden;
  display: flex;
  justify-content: center !important;
  align-items: center !important;

  &.has-media {
    padding: 120px 50px;
  }

  .text-wrapper {

    .subtitle,
    .title,
    .description {
      color: var(--composer-font-color-primary) !important;
    }
  }

  &.has-background {
    .text-wrapper {

      .subtitle,
      .title,
      .description {
        color: var(--composer-font-color-secondary) !important;
      }
    }
  }

  .background-shape {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--composer-primary-color);
    clip-path: polygon(0 0, 100% 0, 100% 70%, 50% 100%, 0 70%);
    z-index: 0;
  }

  .max-content {
    position: relative;
    z-index: 1;
    width: 100%;
    max-width: var(--composer-content-width);
    margin: 0 auto;
    display: flex;
    justify-content: center !important;
    padding: 0;
  }

  .vertical-content {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center !important;
    justify-content: center !important;
    text-align: center !important;
    gap: 100px;
  }

  .text-wrapper {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center !important;
    justify-content: center !important;
    max-width: 800px;
    gap: var(--composer-gap-sm);
    margin-bottom: 0;
    text-align: center !important;

    .subtitle {
      display: flex !important;
      justify-content: center !important;
      text-align: center !important;
      width: 100% !important;
      border: none !important;
      transform: none !important;
      margin-left: 0 !important;
      padding-left: 0 !important;

      &::before,
      &::after {
        display: none !important;
        content: none !important;
        width: 0 !important;
        height: 0 !important;
        border: none !important;
      }
    }

    .title {
      text-align: center !important;
      margin: 0;
      width: 100% !important;
    }

    .description {
      text-align: center !important;
      margin: 0;
      width: 100% !important;
      white-space: normal !important;
      overflow-wrap: break-word !important;
      word-wrap: break-word !important;
    }
  }

  .media-wrapper {
    position: relative;
    width: 100%;
    height: calc(100vh - var(--composer-gap-md));
    margin: 0 auto;

    display: flex;
    border-radius: var(--composer-border-radius-sm);
    justify-content: center !important;
    align-items: center !important;
    overflow: hidden;
    margin-top: 0;
    background-color: var(--color-black);

    .video,
    .image {
      width: 100%;
      height: 100%;
      display: block;
      object-fit: cover;

      :global(video),
      :global(img) {
        width: 100%;
        height: 100%;
        object-fit: cover;
      }
    }

    .thumbnail-container {
      position: relative;
      width: 100%;
      height: 100%;
      display: flex;
      justify-content: center !important;
      align-items: center !important;
      cursor: pointer;
      z-index: 1;

      .thumbnail-image,
      .image {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        object-fit: cover;
        z-index: 1;
      }

      .overlay {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: var(--composer-overlay-color);
        z-index: 2;
        pointer-events: none;
      }

      &::after {
        content: '';
        position: absolute;
        inset: 0;
        z-index: 2;
        transition: background 0.3s ease;
      }


      .play-icon-wrapper {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: 99;

        display: flex;
        justify-content: center;
        align-items: center;


        color: var(--composer-font-color-secondary);
        background: var(--composer-primary-color);
        border-radius: 50%;
        padding: var(--composer-gap-md);

        width: auto;
        height: auto;

        .icon {
          width: 30px;
          height: 30px;
          fill: currentColor;
          color: currentColor;
          display: flex;
          justify-content: center;
          align-items: center;
          font-size: 2.5rem;

          :global(svg) {
            width: 100%;
            height: 100%;
            fill: currentColor;
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    padding: var(--composer-gap-lg) 40px;

    &.has-media {
      padding: 80px 40px;
    }

    .background-shape {
      clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
    }

    .max-content {
      .vertical-content {
        gap: 50px;

        .text-wrapper {
          .title {
            font-size: calc(2.2 * var(--composer-font-size-md));
          }
        }

        .media-wrapper {
          height: auto !important;
          aspect-ratio: 16 / 9;

          .thumbnail-container {
            .play-icon-wrapper {
              content: "";
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    padding: var(--composer-gap-md) 20px;

    &.has-media {
      padding: 60px 20px;
    }

    .max-content {
      .vertical-content {
        .media-wrapper {
          height: auto !important;
          aspect-ratio: 16 / 9;
        }
      }
    }
  }
}

