fix: fixed image size alignment gaps etc.

--- a/editor-components/intro-section/intro-section8/intro-section8.module.scss
+++ b/editor-components/intro-section/intro-section8/intro-section8.module.scss
@@ -7,9 +7,10 @@
   display: flex;
   justify-content: center !important;
   align-items: center !important;
+  padding: calc(var(--composer-gap-xl) * 2) var(--composer-gap-xl);
 
   &.has-media {
-    padding: 120px 50px;
+    padding: calc(var(--composer-gap-xl) * 2) var(--composer-gap-xl);
   }
 
   .text-wrapper {
@@ -17,7 +18,7 @@
     .subtitle,
     .title,
     .description {
-      color: var(--composer-font-color-primary) !important;
+      content: "";
     }
   }
 
@@ -114,9 +115,9 @@
   .media-wrapper {
     position: relative;
     width: 100%;
-    height: calc(100vh - var(--composer-gap-md));
+    max-width: 960px;
+    height: 540px;
     margin: 0 auto;
-
     display: flex;
     border-radius: var(--composer-border-radius-sm);
     justify-content: center !important;
@@ -180,24 +181,19 @@
         transition: background 0.3s ease;
       }
 
-
       .play-icon-wrapper {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 99;
-
         display: flex;
         justify-content: center;
         align-items: center;
-
-
         color: var(--composer-font-color-secondary);
         background: var(--composer-primary-color);
         border-radius: 50%;
         padding: var(--composer-gap-md);
-
         width: auto;
         height: auto;
 
